# CLM-framework

./: .gitignore  CLM_framework_vs2013.sln  CMakeLists.txt
exe/ConsolePuppets/: CMakeLists.txt  ConsolePuppets.h
exe/SimplePuppets/: CMakeLists.txt
lib/local/CLM/include/: CLMParameters.h
lib/local/Puppets/: CMakeLists.txt
lib/local/Puppets/include/: Avatar.h
lib/local/Puppets/src/: Avatar.cc
